<?xml version="1.0"?>
<package format="2">
  <name>jackal_control</name>
  <version>0.8.1</version>
  <description>Controllers for Jackal</description>
  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/jackal_control</url>
  <author email="mpurvis@clearpathrobotics.com">Mike Purvis</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>interactive_marker_twist_server</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>topic_tools</exec_depend>
  <exec_depend>twist_mux</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
